[gd_scene load_steps=2 format=3 uid="uid://cjokk27aosbwc"]

[ext_resource type="Script" path="res://scripts/ui/StaminaUI.gd" id="1_7hpvk"]

[node name="StaminaUi" type="CanvasLayer"]

[node name="StaminaUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7hpvk")

[node name="StaminaBackground" type="ColorRect" parent="StaminaUI"]
layout_mode = 2
offset_bottom = 30.0
color = Color(0.374139, 0.374139, 0.374139, 1)

[node name="StaminaBar" type="ColorRect" parent="StaminaUI"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0
offset_bottom = 30.0
color = Color(0.393028, 0.992452, 0.898003, 1)

[node name="StaminaLabel" type="Label" parent="StaminaUI"]
layout_mode = 2
offset_left = 8.0
offset_top = 3.0
offset_right = 70.0
offset_bottom = 26.0
text = "100/100"

[node name="WarningIcon" type="Label" parent="StaminaUI"]
layout_mode = 2
offset_left = 74.0
offset_top = 3.0
offset_right = 96.0
offset_bottom = 26.0
text = "⚠️"
